2023-10-06  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/hacking.org: List Mohammad-Reza Nabipoor as GNU maintainer.

2023-10-04 Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>

	* etc/hacking.org (Write After Approval): Update.
    * HACKING: Regenerate.

2023-10-04  Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>

	* etc/nix/default.nix: remove the empty line at the EOF.

2023-10-02  Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>

	* etc/nix/default.nix: add a simple nix shell.

2023-09-25  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/libpoke.c (pk_compiler_new_with_flags): Add checks for
	presence of user-provided function pointers for the terminal
	interface.
	* testsuite/poke.libpoke/api.c (test_pk_compiler_new): Update tests.

2023-09-23  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* etc/hacking.org (Maintainers): Update.
	* HACKING: Regenerate.

2023-09-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* configure.ac (AC_CONFIG_FILES): Add `pokefmt/Makefile'.
	* Makefile.am (SUBDIRS): Add `pokefmt'.
	* pokefmt/pokefmt.l: New template system to embed Poke code in docs,
	tests, etc.
	* pokefmt/pokefmt.pk: Poke support code for `pokefmt' app.
	* pokefmt/Makefile.am: New file.
	* run.in (POKEFMTAPPDIR): New variable.
	* poke.pokefmt/pokefmt.exp: New tests.
	* testsuite/Makefile.am (check-DEJAGNU): Add `POKEFMTAPPDIR' env var.
	(EXTRA_DIST): Update.
	* doc/poke.texi (pokefmt): Add new chapter.

2023-09-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Accept t and T suffix for uint<1> values.
	* libpoke/pkl-rt.pk: Adapt values printer accordingly.
	* testsuite/poke.pkl/integers-13.pk: New test.
	* testsuite/poke.pkl/integers-14.pk: Likewise.
	* testsuite/poke.pkl/integers-15.pk: Likewise.
	* testsuite/poke.pkl/integers-16.pk: Likewise.
	* testsuite/poke.map/ass-map-19.pk: Update test accordingly.
	* testsuite/poke.map/maps-int-structs-11.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-6.pk: Likewise.